--- a/start.html
+++ b/start.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>My start file is not index.html file</h1>
+    <img src="cartoon-html-css-video.jpg" alt="">
 </body>
 
 </html>
